required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (5.1-dev, SVN trunk):
-------------------------------------

- enforce (-99 -99) to be the penup value for vector symbols (#1036)

- Support for labeling features (polygon & line) prior to clipping. This
results in stable label positions regardless of map extent. (#2447)

- Support for quantization and forced palette png output with RGBA images
  (#2436)

- SLD using a single BBOX filter should generate an SQL ststement for 
  oracle/postgis/ogr (#2450)

- Accurate Calculation of legend size for WMS LegendURL (#2435)

- Converted mapogr.cpp to use OGR C API instead of C++ classes to allow
  GDAL/OGR updates without having to recompile MapServer (#545, #697)

- add missing space on dashed polygon outlines with svg (#2429) 

- Restored behavior of MS 4.10 and made WMS STYLES parameter optional
  again in GetMap and GetFeatureInfo requests (#2427)

- Speed up forced palette rendering (#2422)

- WMS GetFeatureInfo: honour FEATURE_COUNT for any INFO_FORMAT and 
  apply the FEATURE_COUNT per layer instead of globally (#2423, #1686)

- enable soft outlines on truetype labels. This is triggered with a new 
  keyword OUTLINEWIDTH for the LABEL block (#2417) 

- fix clipping rectangle to take width as well as size into account (#2411)

- AGG: added and use a line and polygon adaptor to avoid copying shapeObj
  points to an agg path_storage. avoids a few mallocs and a few copies.

- fixed symbolsetObj not to set the SWIG immutable flag permanently
  don't expose refcount and the symbol attributes (Ticket #2407)

- fix for support of entity encoded text in angle follow text (#2403)

- AGG: initial support for native computation of label sizes (#2357)