@@ -13,6 +13,10 @@ For a complete change history, please see the Subversion log comments.
 Current Version (5.1-dev, SVN trunk):
 -------------------------------------
 
+- fixed issue where path following labels sometimes used the supplied
+setting for position. In all cases with ANGLE FOLLOW we want to force
+position MS_CC regardless of what is set in the mapfile.
+
 - enforce (-99 -99) to be the penup value for vector symbols (#1036)
 
 - Support for labeling features (polygon & line) prior to clipping. This
